# mcp-workbench

./: .env.example  .gitignore  LICENSE  README.md  chainlit.md  pyproject.toml
app/: __init__.py  config.py  logging.py  main.py
app/api/: health.py
app/chat/: __init__.py  tool_loop.py
app/llm/: __init__.py  base.py  openai.py
app/mcp/: __init__.py  manager.py  models.py
app/prompts/: __init__.py  manager.py  models.py  profiles.yaml
app/tools/: __init__.py  policy.py
app/ui/: __init__.py  chainlit_app.py  runtime.py
docs/: architecture.md  design.md
tests/: test_chat_tool_loop.py  test_config.py  test_health.py  test_mcp_manager.py  test_mcp_models.py  test_openai_provider.py  test_prompt_manager.py  test_tool_policy.py  test_ui_runtime.py
