[project]
name = "mcp-workbench"
version = "0.1.0"
description = "Self-hosted MCP-native workbench for engineers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.23.0",
  "python-dotenv>=1.0.0",
  "pydantic-settings>=2.0.0",
  "sqlalchemy>=2.0.0",
  "python-json-logger>=3.0.0",
]
optional-dependencies = { test = ["pytest>=8.0.0", "httpx>=0.24.0"] }
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Framework :: FastAPI",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://example.com/mcp-workbench"
"Repository" = "https://example.com/mcp-workbench"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
